fix css layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,6 @@
 
     margin: 0px;
     padding: 0px;
-
-    display: flex;
-    flex-direction: column;
 }
 
 
@@ -74,7 +71,8 @@
         min-height: 13rem;
     }
 
-    .Sidebar .Container {
+    .Sidebar > .Container {
+        display: flex;
         flex-direction: row;
         width: 100%;
         height: 100%;
